--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         </ol>
         <div class="carousel-inner" role="listbox">
-          <div class="carousel-item active" style="background-image: url('./img/latte.jpg')">
+          <div class="carousel-item active" style="background-image: url('./img/home/latte.jpg')">
             <div class="carousel-caption">
               <!--------tooltip-------->
               <a href="#" role="button" class="btn btn-lg btn-light text-black mb-3" data-toggle="tooltip" data-html="true" title="Or call us at<br><strong>1-205-555-1234</strong>" data-placement="bottom">
@@ -88,7 +88,7 @@
               <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde, odio?</p>
             </div>
           </div>
-          <div class="carousel-item" style="background-image: url('./img/coffee-machine.jpg')">
+          <div class="carousel-item" style="background-image: url('./img/home/coffee-machine.jpg')">
             <div class="carousel-caption">
               <!--------tooltip-------->
               <a href="#" role="button" class="btn btn-lg btn-light text-black mb-3" data-toggle="tooltip" data-html="true" title="Or call us at<br><strong>1-205-555-1234</strong>" data-placement="bottom">
@@ -98,7 +98,7 @@
               <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, ipsa.</p>
             </div>
           </div>
-          <div class="carousel-item" style="background-image: url('./img/people.jpg')">
+          <div class="carousel-item" style="background-image: url('./img/home/people.jpg')">
             <div class="carousel-caption">
               <!--------tooltip-------->
               <a href="#" role="button" class="btn btn-lg btn-light text-black mb-3" data-toggle="tooltip" data-html="true" title="Or call us at<br><strong>1-205-555-1234</strong>" data-placement="bottom">
@@ -119,6 +119,11 @@
        </a>
       </div>
     </header>
+
+    <!-------------Menu----------------->
+    <div class="container">
+      
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
