--- a/src/index.html
+++ b/src/index.html
@@ -328,6 +328,6 @@
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAZxMQgp1kaV7htAGuj_6c-PRg1pxSdFZ0&callback=initMap"
     type="text/javascript"></script>
     <!------------SCRIPT----------------->
-    <script src="./index.js"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
