--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
     <meta name="msapplication-TileImage" content="img/favicons/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <!------------------CSS---------------------->
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./app.css">
     <title>Cafe - Local</title>
 </head>
 <body>
