--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 alt="person">
                 <div class="carousel-caption">
                   <h2 class="display-4">#cafeLocal</h2>
-                  <p class="lead">Be part of Us! Use our hastag on tour instagram post and get a free drink!</p>
+                  <p class="lead">Be part of Us! Use our hastag on your next  instagram post and get a free drink!</p>
                 </div>
             </div>
             <div class="carousel-item">
@@ -254,7 +254,7 @@
                 alt="2 people">
                 <div class="carousel-caption">
                   <h2 class="display-4">#cafeLocal</h2>
-                  <p class="lead">Be part of Us! Use our hastag on tour instagram post and get a free drink!</p>
+                  <p class="lead">Be part of Us! Use our hastag on your next  instagram post and get a free drink!</p>
                 </div>
             </div>
             <div class="carousel-item">
