--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="carousel-inner" role="listbox">
           <div class="carousel-item active" style="background-image: url('./img/home/latte.jpg');" id="firstCarousel">
             <div class="carousel-caption">
-              <a href="#" role="button" class="btn btn-lg btn-light text-black mb-3" data-toggle="tooltip" data-html="true" title="Or call us at<br><strong>1-205-555-1234</strong>" data-placement="bottom">
+              <a href="#direction" role="button" class="btn btn-lg btn-light text-black mb-3" data-toggle="tooltip" data-html="true" title="Or call us at<br><strong>1-205-555-1234</strong>" data-placement="bottom">
                     Direction
               </a>
               <h2 class="display-4">Brewing with love</h2>
@@ -82,7 +82,7 @@
           </div>
           <div class="carousel-item" id="firstCarousel" style="background-image: url('./img/home/coffee-machine.jpg')">
             <div class="carousel-caption">
-              <a href="#" role="button" class="btn btn-lg btn-light text-black mb-3" data-toggle="tooltip" data-html="true" title="Or call us at<br><strong>1-205-555-1234</strong>" data-placement="bottom">
+              <a href="#direction" role="button" class="btn btn-lg btn-light text-black mb-3" data-toggle="tooltip" data-html="true" title="Or call us at<br><strong>1-205-555-1234</strong>" data-placement="bottom">
                 Direction
               </a>
               <h2 class="display-4">A new experience</h2>
@@ -91,7 +91,7 @@
           </div>
           <div class="carousel-item" id="firstCarousel" style="background-image: url('./img/home/people.jpg')">
             <div class="carousel-caption">
-              <a href="#" role="button" class="btn btn-lg btn-light text-black mb-3" data-toggle="tooltip" data-html="true" title="Or call us at<br><strong>1-205-555-1234</strong>" data-placement="bottom">
+              <a href="#direction" role="button" class="btn btn-lg btn-light text-black mb-3" data-toggle="tooltip" data-html="true" title="Or call us at<br><strong>1-205-555-1234</strong>" data-placement="bottom">
                 Direction
               </a>
               <h2 class="display-4">Amazing people.</h2>
